commit for pulling code

--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Trang chủ | Clone Shopee</title>
+  <meta name="title"
+    content="Đây là một dự án clone Shopee dùng cho mục đích học tập, và phi thương mại"
+    data-rh="true" />
+  <meta name="description"
+    content="Đây là một dự án clone Shopee dùng cho mục đích học tập, và phi thương mại"
+    data-rh="true" />
+  <!-- Facebook Meta tags -->
+  <meta property="og:locale" content="vi" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Clone Shopee by Bao Truong" />
+  <meta property="og:description"
+    content="Đây là một dự án clone Shopee dùng cho mục đích học tập, và phi thương mại" />
+  <!-- <meta property="og:url" content="https://baotruong-dev" /> -->
+  <meta property="og:site_name" content="" />
+  <meta property="og:image" content="./src/assets/spw-1662954069.jpeg" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
