--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
   <meta property="og:title" content="Clone Shopee by Bao Truong" />
   <meta property="og:description"
     content="Đây là một dự án clone Shopee dùng cho mục đích học tập, và phi thương mại" />
-  <!-- <meta property="og:url" content="https://baotruong-dev" /> -->
+  <meta property="og:url" content="https://shopee-baotruong.vercel.app/" />
   <meta property="og:site_name" content="" />
-  <meta property="og:image" content="/public/spw-1662954069.jpeg" />
+  <meta property="og:image" content="public/spw-1662954069.jpeg" />
+
 </head>
 
 <body>
