fix: og:image directory part 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     content="Đây là một dự án clone Shopee dùng cho mục đích học tập, và phi thương mại" />
   <meta property="og:url" content="https://shopee-baotruong.vercel.app/" />
   <meta property="og:site_name" content="" />
-  <meta property="og:image" content="%PUBLIC_URL%/spw-1662954069.jpeg" />
+  <meta property="og:image" content="/spw-1662954069.jpeg" />
 </head>
 
 <body>
